<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beat to the Step</string>
    <string name="action_settings">Settings</string>
    <string name="action_playlists">Playlists</string>
    <string name="action_songs">Songs</string>
    <string name="music_song_title">Track</string>
    <string name="music_artist_title">Artist</string>
    <string name="music_bpm_count">BPM 000</string>
    <string name="music_spm_count">SPM 000</string>
    <string name="music_album_art">Album Art</string>
    <string name="music_rewind">Rewind</string>
    <string name="music_fast_forward">Fast Forward</string>
    <string name="music_play_pause">Play and Pause</string>
    <string name="io_count">Count Steps</string>
    <string name="playlists_title">Playlists</string>
    <string name="playlists_none">No playlists.</string>
    <string name="playlists_new">New Playlist</string>
    <string name="songs_playlist_name">Local Media</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_select">Select Song</string>
    <string name="no_notes">No music.</string>
    
    <string-array name="uri_spinner_array">
        <item>http://upload.wikimedia.org/wikipedia/commons/6/6d/Banana.ogg</item>
        <item>http://www.freesound.org/data/previews/18/18765_18799-lq.mp3</item>
    </string-array>
    
</resources>
