<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayerActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:maxLength="20"
            android:text="@string/music_song_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/artist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/song_title"
            android:maxLength="20"
            android:text="@string/music_artist_title"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bpm_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/music_bpm_count"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/spm_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/bpm_count"
            android:text="@string/music_spm_count"
            android:textSize="13sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/album_art"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:contentDescription="@string/music_album_art"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_album" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <SeekBar
            android:id="@+id/song_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/song_seekbar"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/rewind"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/music_rewind"
                android:scaleType="fitXY"
                android:src="@drawable/media_previous"
                style="?android:attr/buttonBarButtonStyle" />

            <ImageButton
                android:id="@+id/play_pause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/music_play_pause"
                android:scaleType="fitXY"
                android:src="@drawable/media_pause"
                style="?android:attr/buttonBarButtonStyle" />

            <ImageButton
                android:id="@+id/fast_forward"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/music_fast_forward"
                android:scaleType="fitXY"
                android:src="@drawable/media_next"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>