<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SongSelectActivity" >

    <TextView
        android:id="@+id/playlist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/songs_playlist_name" />

    <ListView
        android:id="@+id/songs_list"
        android:layout_width="match_parent"
        android:layout_height="300dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:id="@+id/save_playlist"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            android:onClick="playlistSave"
            android:text="@string/button_save"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/cancel_playlist"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="playlistCancel"
            android:text="@string/button_cancel"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>